# cmake-study

./: .gitignore  README.md
cmake-multi-library-project/: CMakeLists.txt
cmake-multi-library-project/LibProject01/: CMakeLists.txt  hello.c  hello.h
cmake-multi-library-project/Project01/: CMakeLists.txt  main.c
cmake-multi-library-project/Project02/: CMakeLists.txt  main.c
ctest-tutorial/: CMakeLists.txt
ctest-tutorial/lib/: utility.c
ctest-tutorial/src/: CMakeLists.txt
ctest-tutorial/test/: test.c
lib/: CMakeLists.txt  utility.h
src/: main.c
test/: CMakeLists.txt
